2004-05-22    <mschimek@users.sf.net>

	* plugins/mpeg/mpeg.c (do_start): Corrected YUV/YVU pixfmt retries.

2004-05-21    <mschimek@users.sf.net>

	* src/frequencies.c (loose_strcmp): Infinite loop. Holy crap I
	  still cannot write ten lines without a bug.

2004-05-19    <mschimek@users.sf.net>

	* src/xawtv.c, src/tvengbktr.c, Makefile.am (Multimedia_DATA):
	  FreeBSD fixes.

2004-05-18    <mschimek@users.sf.net>

	* src/frequencies.c: Extended tveng_tuned_channel_by_(rf_)name
	  to match loosely for xawtv setstation.
	* src/xawtv.c: Accept setstation command from nxtvepg.

2004-05-17    <mschimek@users.sf.net>

	* src/channel_editor.c (on_channel_search_clicked): Make sure
	  we're in capture mode.
	* src/osd.c, src/osd.h, src/xawtv.c: Accept vtx, message
	  XAWTV_REMOTE commands from nxtvepg.

2004-05-15    <mschimek@users.sf.net>

	* src/Makefile.am, src/zremote.c: New experimental zremote tool.
	* src/tveng1.c: Must not include linux/kernel.k, fs.h.
	* src/eggcellrendererkeys.c (egg_cell_renderer_keys_get_accelerator):
	  GCC 3.4 warnings.
	* src/xawtv.c, src/xawtv.h,
	  src/v4linterface.c (z_switch_channel), src/main.c (main):
	  Added Xawtv compatible IPC.

2004-05-14    <mschimek@users.sf.net>

	* src/tveng.h, src/tveng.c (tv_clip_vector_add_clip_xy):
	  Fix after gcc warning about MIN() on bitfield.

2004-04-21    <mschimek@users.sf.net>

	* po/sv.po, po/pl.po, po/nl.po, po/it.po, po/fr.po, po/es.po,
	  po/de.po, glade/zapping.glade2, src/audio.c (startup_audio,
	  general_audio_setup, general_audio_apply), src/v4linterface.c
	  (z_switch_channel), src/zmisc.c (zmisc_switch_mode): Restored
	  mute on channel change option.

2004-04-19    <mschimek@users.sf.net>

	* common/Makefile.am: Updated structpr hints. Removed obsolete
	  unicode helper files.
	* common/device.c, common/device.h, common/structpr_gen.pl:
	  Added R/W hints, union selector.
	* common/videodev25.h: Updated.
	* src/oss.c: common/structpr interface changed.