@@ -922,6 +922,9 @@ tveng_tuned_channel_by_string	(tveng_tuned_channel *	list,
 
   for (tc = list; tc; tc = tc->next)
     {
+      fprintf(stderr, "TC%p <%s><%s>\n",
+	      tc, tc->name, tc->rf_name);
+
       t = g_utf8_casefold (* (const gchar **)(((char *) tc) + offset), -1);
 
       if (0 == strcmp (s, t))
